# internalizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dev/: example_regional_mapping.csv  recreate_perspectives_mfs.ipynb  setup_ecoinvent.py  test_currencies.ipynb  test_new_calculation_function.ipynb
internalizer/: __init__.py  filesystem_constants.py  internalizer.py  plca.py  regionalization.py  utils.py
internalizer/data/: CPI_US.csv  HICPdata.csv  NCVs.csv  PPPdata.csv  lcia_for_monetization_ei310.json  mfs_perspectives_euro2022.nc  mfs_perspectives_extended_euro_2022.nc
